feat: better filtering with Mots cles

--- a/main.ipynb
+++ b/main.ipynb
@@ -90,24 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "cd7e0226-864d-43cf-843d-2adf0c6067f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import json\n",
     "import re\n",
+    "import os\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from openai import OpenAI\n",
-    "import os\n",
     "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "769b4de5-f1bd-4eb8-807b-0ade4f06db02",
    "metadata": {},
    "outputs": [],
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "772024f4-64d3-4faa-9874-41cf1114c84d",
    "metadata": {},
    "outputs": [
@@ -128,25 +127,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Suggested Event: Suggested Event:\n",
-      "ID: 63487, Title: \"L'Anne d'avant\" (The Year Before): an exhibition in the 10th arrondissement of Paris takes you right to the heart of French athletes' preparation., Date: 2024-07-26T02:00:00+02:00 to 2024-09-09T01:59:59+02:00, Location: TEP de la Grange-aux-Belles / Agnes Tirop, 8 rue Georg Friedrich Haendel, 75010, Paris\n",
-      "\n",
-      "This event might not be specifically about modern art, but it involves an exhibition related to French athletes' preparation, which could also be of interest if you\n"
+      "Suggested Event: Based on your query \"J'aimerai bien voir un truc sportive,\" I recommend the event \"Paris Sportives: activités de bien-être et boxe par AMUNANTI\" (Event ID: 56570) happening at Place Stalingrad in Paris. This event offers sports activities and would be a great fit for someone looking to see a sports-related event. Enjoy!\n"
      ]
     }
    ],
    "source": [
-    "# Load formatted events from the JSON file\n",
-    "def load_formatted_events(file_path):\n",
-    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
-    "        return json.load(file)\n",
-    "        \n",
-    "# Clean HTML tags from text\n",
+    "# Function to clean HTML tags from text\n",
     "def clean_html_tags(text):\n",
     "    clean = re.compile('<.*?>')\n",
     "    return re.sub(clean, ' ', text) if isinstance(text, str) else text\n",
-    "    \n",
-    "# Preprocess events to create a TF-IDF matrix\n",
+    "\n",
+    "# Function to prefilter events based on the query\n",
+    "def prefilter_events(events, query):\n",
+    "    query_lower = query.lower()\n",
+    "    filtered_events = [\n",
+    "        event for event in events\n",
+    "        if any(keyword.lower() in query_lower for keyword in event.get('Mots clés', '').split(','))\n",
+    "        or any(keyword.lower() in query_lower for keyword in event.get('Titre', '').split())\n",
+    "        or any(keyword.lower() in query_lower for keyword in event.get('Description', '').split())\n",
+    "    ]\n",
+    "    return filtered_events if filtered_events else events  # return all if no events match prefiltering\n",
+    "\n",
+    "# Function to preprocess events and create a TF-IDF matrix\n",
     "def preprocess_events(events):\n",
     "    for event in events:\n",
     "        event['combined_text'] = f\"{event['Titre']} {event['Description']} {event.get('Mots clés', '')}\"\n",
@@ -156,18 +158,17 @@
     "    tfidf_matrix = vectorizer.fit_transform(texts)\n",
     "    return vectorizer, tfidf_matrix, events\n",
     "\n",
-    "# Get top N relevant events based on query\n",
-    "def get_top_relevant_events(query, vectorizer, tfidf_matrix, events, top_n=10):\n",
+    "# Function to get top N relevant events based on query\n",
+    "def get_top_relevant_events(query, vectorizer, tfidf_matrix, events, top_n=20):\n",
     "    query_vec = vectorizer.transform([query])\n",
     "    cosine_similarities = cosine_similarity(query_vec, tfidf_matrix).flatten()\n",
     "    relevant_indices = cosine_similarities.argsort()[-top_n:][::-1]\n",
     "    return [events[idx] for idx in relevant_indices]\n",
     "\n",
-    "# Generate the prompt with limited events\n",
-    "def generate_prompt(query, relevant_events):\n",
+    "# Function to generate a user-friendly prompt with the suggested events\n",
+    "def generate_prompt(query, suggested_events):\n",
     "    events_text = \"\\n\".join([\n",
-    "        f\"ID: {event['ID']}, Title: {event['Titre']}, Date: {event['Date de début']} to {event['Date de fin']}, Location: {event['Nom du lieu']}, {event['Adresse du lieu']}, {event['Code postal']}, {event['Ville']}\" \n",
-    "        for event in relevant_events\n",
+    "        f\"ID: {event['ID']}, Title: {event['Titre']}, Date: {event['Date de début']} to {event['Date de fin']}, Location: {event['Nom du lieu']}, {event['Adresse du lieu']}, {event['Code postal']}, {event['Ville']}\"         for event in suggested_events\n",
     "    ])\n",
     "    prompt = f\"\"\"\n",
     "    You are an assistant that helps people find events in Paris. Based on the query below, suggest the best matching event from the list.\n",
@@ -182,8 +183,8 @@
     "    return prompt\n",
     "\n",
     "# Find the best matching event\n",
-    "def find_event(query, events, vectorizer, top_n=10):\n",
-    "    relevant_events = get_top_relevant_events(query, events, vectorizer, top_n)\n",
+    "def find_event(query, events, vectorizer, tfidf_matrix, top_n=20):\n",
+    "    relevant_events = get_top_relevant_events(query, vectorizer, tfidf_matrix, events, top_n)\n",
     "    prompt = generate_prompt(query, relevant_events)\n",
     "    response = client.chat.completions.create(\n",
     "        model=\"gpt-3.5-turbo\",\n",
@@ -193,18 +194,36 @@
     "        ],\n",
     "        max_tokens=150\n",
     "    )\n",
-    "    return response.choices[0].message.content\n",
+    "    return response.choices[0].message.content, relevant_events\n",
     "\n",
-    "# Path to your formatted JSON file\n",
-    "formatted_events_file_path = 'formatted_xlsx_events.json'\n",
+    "# Load formatted events from the JSON file\n",
+    "def load_formatted_events(file_path):\n",
+    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "        return json.load(file)\n",
     "\n",
-    "# Load and preprocess the data\n",
+    "# Save filtered events to a JSON file\n",
+    "def save_filtered_events(filtered_events, file_path):\n",
+    "    with open(file_path, 'w', encoding='utf-8') as file:\n",
+    "        json.dump(filtered_events, file, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "# Main function to find relevant events based on user query and generate a prompt\n",
+    "def find_and_generate_prompt(user_query, events, top_n=20):\n",
+    "    filtered_events = prefilter_events(events, user_query)\n",
+    "    vectorizer, tfidf_matrix, processed_events = preprocess_events(filtered_events)\n",
+    "    suggested_event, relevant_events = find_event(user_query, processed_events, vectorizer, tfidf_matrix, top_n)\n",
+    "    \n",
+    "    # Save the filtered events\n",
+    "    save_filtered_events(relevant_events, 'filtered_events.json')\n",
+    "    \n",
+    "    return suggested_event\n",
+    "\n",
+    "# Load events\n",
+    "formatted_events_file_path = 'data/formatted_xlsx_events.json'\n",
     "formatted_events = load_formatted_events(formatted_events_file_path)\n",
-    "vectorizer, tfidf_matrix, processed_events = preprocess_events(formatted_events)\n",
     "\n",
     "# Example usage\n",
-    "user_query = \"I'd like to go to an expoisition on modern art\"\n",
-    "suggested_event = find_event(user_query, vectorizer, tfidf_matrix, processed_events)\n",
+    "user_query = \"J'aimerai bien voir un truque sportive\"\n",
+    "suggested_event = find_and_generate_prompt(user_query, formatted_events)\n",
     "print(\"Suggested Event:\", suggested_event)"
    ]
   },
