feat: integrated langchain to my code

--- a/main.ipynb
+++ b/main.ipynb
@@ -100,7 +100,9 @@
     "import os\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from openai import OpenAI\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.llms.openai import OpenAI\n",
     "from dotenv import load_dotenv"
    ]
   },
@@ -109,25 +111,43 @@
    "execution_count": 2,
    "id": "769b4de5-f1bd-4eb8-807b-0ade4f06db02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The class `OpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAI`.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
    "source": [
     "# Import configuration\n",
     "load_dotenv()\n",
     "\n",
-    "client = OpenAI(api_key=os.environ.get(\"OPENAI_API_KEY\"),)"
+    "llm = OpenAI(api_key=os.environ.get(\"OPENAI_API_KEY\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "772024f4-64d3-4faa-9874-41cf1114c84d",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 0.3.0. Use invoke instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Suggested Event: Based on your query \"J'aimerai bien voir un truc sportive,\" I recommend the event \"Paris Sportives: activités de bien-être et boxe par AMUNANTI\" (Event ID: 56570) happening at Place Stalingrad in Paris. This event offers sports activities and would be a great fit for someone looking to see a sports-related event. Enjoy!\n"
+      "Suggested Event: \n",
+      "    ID: 49736, Title: Paris sport proximit: karat, football, marche sportive, badminton et remise en forme au centre sportif Jules Ladoumgue, Date: 2023-09-18T02:00:00+02:00 to 2024-08-01T01:59:59+02:00, Location: Centre sportif Jules Ladoumgue, 39 Route des Petits Ponts, 75019, Paris\n"
      ]
     }
    ],
@@ -168,7 +188,8 @@
     "# Function to generate a user-friendly prompt with the suggested events\n",
     "def generate_prompt(query, suggested_events):\n",
     "    events_text = \"\\n\".join([\n",
-    "        f\"ID: {event['ID']}, Title: {event['Titre']}, Date: {event['Date de début']} to {event['Date de fin']}, Location: {event['Nom du lieu']}, {event['Adresse du lieu']}, {event['Code postal']}, {event['Ville']}\"         for event in suggested_events\n",
+    "        f\"ID: {event['ID']}, Title: {event['Titre']}, Date: {event['Date de début']} to {event['Date de fin']}, Location: {event['Nom du lieu']}, {event['Adresse du lieu']}, {event['Code postal']}, {event['Ville']}\"\n",
+    "        for event in suggested_events\n",
     "    ])\n",
     "    prompt = f\"\"\"\n",
     "    You are an assistant that helps people find events in Paris. Based on the query below, suggest the best matching event from the list.\n",
@@ -186,15 +207,13 @@
     "def find_event(query, events, vectorizer, tfidf_matrix, top_n=20):\n",
     "    relevant_events = get_top_relevant_events(query, vectorizer, tfidf_matrix, events, top_n)\n",
     "    prompt = generate_prompt(query, relevant_events)\n",
-    "    response = client.chat.completions.create(\n",
-    "        model=\"gpt-3.5-turbo\",\n",
-    "        messages=[\n",
-    "            {\"role\": \"system\", \"content\": \"You are an assistant that helps people find events in Paris.\"},\n",
-    "            {\"role\": \"user\", \"content\": prompt}\n",
-    "        ],\n",
-    "        max_tokens=150\n",
-    "    )\n",
-    "    return response.choices[0].message.content, relevant_events\n",
+    "    \n",
+    "    # Use LangChain to generate the response\n",
+    "    prompt_template = PromptTemplate(input_variables=[\"prompt\"], template=\"{prompt}\")\n",
+    "    chain = LLMChain(llm=llm, prompt=prompt_template)\n",
+    "    response = chain.run(prompt=prompt)\n",
+    "    \n",
+    "    return response, relevant_events\n",
     "\n",
     "# Load formatted events from the JSON file\n",
     "def load_formatted_events(file_path):\n",
