fix: minor changes to convert and clean excel

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,19 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "df0a6a37-1d43-466c-ae17-ccf14a266f35",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[22], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mre\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfeature_extraction\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtext\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TfidfVectorizer\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpairwise\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m cosine_similarity\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mopenai\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/7v/6mwzjf_55kb74qwkksjnfy780000gn/T/ipykernel_75552/4030073604.py:11: MarkupResemblesLocatorWarning: The input looks more like a URL than markup. You may want to use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
+      "  soup = BeautifulSoup(text, \"html.parser\")\n",
+      "/var/folders/7v/6mwzjf_55kb74qwkksjnfy780000gn/T/ipykernel_75552/4030073604.py:11: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
+      "  soup = BeautifulSoup(text, \"html.parser\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excel file has been cleaned and saved to data/cleaned_xlsx_data.json\n",
+      "Formatted events have been saved to data/formatted_xls_events.json\n"
      ]
     }
    ],
@@ -22,16 +29,27 @@
     "import pandas as pd\n",
     "import json\n",
     "import re\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "# Define a whitelist of French characters\n",
+    "french_chars = \"àâäçéèêëîïôùûüÿÀÂÄÇÉÈÊËÎÏÔÙÛÜŸ.:-/+’',\"\n",
+    "\n",
+    "def remove_html_tags(text):\n",
+    "    # Remove HTML tags using BeautifulSoup\n",
+    "    soup = BeautifulSoup(text, \"html.parser\")\n",
+    "    return soup.get_text(separator=\" \")\n",
     "\n",
     "def find_and_replace_ambiguous_unicode(text, replacement=\"\"):\n",
-    "    # Regex pattern to match non-ASCII characters\n",
-    "    non_ascii_pattern = re.compile(r'[^\\x00-\\x7F]')\n",
+    "    # Remove newline characters\n",
+    "    text = text.replace('\\n', ' ').replace('\\t', ' ')\n",
+    "    # Regex pattern to match characters that are not in the ASCII range and not in the French whitelist\n",
+    "    non_ascii_pattern = re.compile(r'[^a-zA-Z0-9\\s' + re.escape(french_chars) + r']')\n",
     "    return non_ascii_pattern.sub(replacement, text)\n",
     "\n",
     "def clean_data(data, replacement=\"\"):\n",
     "    cleaned_data = []\n",
     "    for item in data:\n",
-    "        cleaned_item = {k: find_and_replace_ambiguous_unicode(str(v), replacement) for k, v in item.items()}\n",
+    "        cleaned_item = {k: find_and_replace_ambiguous_unicode(remove_html_tags(str(v)), replacement) for k, v in item.items()}\n",
     "        cleaned_data.append(cleaned_item)\n",
     "    return cleaned_data\n",
     "\n",
@@ -47,12 +65,14 @@
     "            \"Nom du lieu\": event.get('Nom du lieu', ''),\n",
     "            \"Adresse du lieu\": event.get('Adresse du lieu', ''),\n",
     "            \"Code postal\": event.get('Code postal', ''),\n",
+    "            \"Mots clés\": event.get('Mots clés', ''),\n",
     "            \"Ville\": event.get('Ville', ''),\n",
-    "            \"Coordonnées géographiques\": event.get('Coordonnées géographiques', '')\n",
+    "            \"Coordonnées géographiques\": event.get('Coordonnées géographiques', ''),\n",
     "        }\n",
     "        for event in events\n",
     "    ]\n",
     "    return formatted_events\n",
+    "\n",
     "\n",
     "def convert_and_clean_excel(input_file_path, output_file_path, formatted_output_file_path):\n",
     "    # Load the Excel file\n",
@@ -61,7 +81,7 @@
     "    # Convert the DataFrame to a dictionary\n",
     "    data = df.to_dict(orient='records')\n",
     "\n",
-    "    # Clean the data to remove ambiguous Unicode characters\n",
+    "    # Clean the data to remove HTML tags, newlines, and ambiguous Unicode characters except French characters\n",
     "    cleaned_data = clean_data(data)\n",
     "\n",
     "    # Save the cleaned data to a JSON file\n",
@@ -80,9 +100,9 @@
     "    print(f\"Formatted events have been saved to {formatted_output_file_path}\")\n",
     "\n",
     "# File paths\n",
-    "input_file_path = 'que-faire-a-paris-.xlsx'\n",
-    "cleaned_output_file_path = 'cleaned_xlsx_data.json'\n",
-    "formatted_output_file_path = 'formatted_xls_events.json'\n",
+    "input_file_path = 'data/que-faire-a-paris-2.xlsx'\n",
+    "cleaned_output_file_path = 'data/cleaned_xlsx_data.json'\n",
+    "formatted_output_file_path = 'data/formatted_xls_events.json'\n",
     "\n",
     "# Convert, clean, and format the Excel file\n",
     "convert_and_clean_excel(input_file_path, cleaned_output_file_path, formatted_output_file_path)\n"
@@ -90,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "cd7e0226-864d-43cf-843d-2adf0c6067f1",
    "metadata": {},
    "outputs": [],
@@ -102,25 +122,16 @@
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from langchain.chains import LLMChain\n",
     "from langchain.prompts import PromptTemplate\n",
-    "from langchain.llms.openai import OpenAI\n",
+    "from langchain.llms import OpenAI\n",
     "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "769b4de5-f1bd-4eb8-807b-0ade4f06db02",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The class `OpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAI`.\n",
-      "  warn_deprecated(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import configuration\n",
     "load_dotenv()\n",
@@ -130,24 +141,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "772024f4-64d3-4faa-9874-41cf1114c84d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 0.3.0. Use invoke instead.\n",
-      "  warn_deprecated(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Suggested Event: \n",
-      "    ID: 49736, Title: Paris sport proximit: karat, football, marche sportive, badminton et remise en forme au centre sportif Jules Ladoumgue, Date: 2023-09-18T02:00:00+02:00 to 2024-08-01T01:59:59+02:00, Location: Centre sportif Jules Ladoumgue, 39 Route des Petits Ponts, 75019, Paris\n"
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: on\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
+      " * Running on http://127.0.0.1:5002\n",
+      "\u001b[33mPress CTRL+C to quit\u001b[0m\n",
+      " * Restarting with stat\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/ipykernel_launcher.py\", line 18, in <module>\n",
+      "    app.launch_new_instance()\n",
+      "  File \"/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/traitlets/config/application.py\", line 1074, in launch_instance\n",
+      "    app.initialize(argv)\n",
+      "  File \"/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/traitlets/config/application.py\", line 118, in inner\n",
+      "    return method(app, *args, **kwargs)\n",
+      "  File \"/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/ipykernel/kernelapp.py\", line 692, in initialize\n",
+      "    self.init_sockets()\n",
+      "  File \"/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/ipykernel/kernelapp.py\", line 331, in init_sockets\n",
+      "    self.shell_port = self._bind_socket(self.shell_socket, self.shell_port)\n",
+      "  File \"/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/ipykernel/kernelapp.py\", line 253, in _bind_socket\n",
+      "    return self._try_bind_socket(s, port)\n",
+      "  File \"/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/ipykernel/kernelapp.py\", line 229, in _try_bind_socket\n",
+      "    s.bind(\"tcp://%s:%i\" % (self.ip, port))\n",
+      "  File \"/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/zmq/sugar/socket.py\", line 311, in bind\n",
+      "    super().bind(addr)\n",
+      "  File \"_zmq.py\", line 898, in zmq.backend.cython._zmq.Socket.bind\n",
+      "  File \"_zmq.py\", line 160, in zmq.backend.cython._zmq._check_rc\n",
+      "zmq.error.ZMQError: Address already in use (addr='tcp://127.0.0.1:54663')\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3558: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -210,8 +260,8 @@
     "    \n",
     "    # Use LangChain to generate the response\n",
     "    prompt_template = PromptTemplate(input_variables=[\"prompt\"], template=\"{prompt}\")\n",
-    "    chain = LLMChain(llm=llm, prompt=prompt_template)\n",
-    "    response = chain.run(prompt=prompt)\n",
+    "    sequence = RunnableSequence([prompt_template, llm])\n",
+    "    response = sequence.invoke({\"prompt\": prompt})  # Updated method\n",
     "    \n",
     "    return response, relevant_events\n",
     "\n",
@@ -286,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
